--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="cn">
 <head>
   <meta charset="utf-8">
-  <title>WebSite</title>
+  <title>d7z.net</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icon.svg">
