--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="cn"><head>
   <meta charset="utf-8">
-  <title>WebSite</title>
+  <title>d7z.net</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icon.svg">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<style>body{font-feature-settings:"tnum";font-variant:tabular-nums;font-size:14px}html{-webkit-tap-highlight-color:transparent}body,html{width:100%;height:100%}*,:after,:before{box-sizing:border-box}html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-ms-overflow-style:scrollbar;--antd-wave-shadow-color:#1890ff;--scroll-bar:0}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji"}body{margin:0;color:#000000d9;line-height:1.5715;background-color:#fff;font-feature-settings:"tnum"}</style><link rel="stylesheet" href="styles.69b63f57ee5c508a.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.69b63f57ee5c508a.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.8ecdbddc60450415.js" type="module"></script><script src="polyfills.9ed784da9b617379.js" type="module"></script><script src="main.94f278f4a9f9b928.js" type="module"></script>
+<script src="runtime.8ecdbddc60450415.js" type="module"></script><script src="polyfills.9ed784da9b617379.js" type="module"></script><script src="main.a28e3157bca0b03d.js" type="module"></script>
 
 </body></html>
